Fix layout issue of nav bar on iPhones

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -31,7 +31,7 @@ a:hover { color: #00577b; }
 .pure-menu.pure-menu-open { background-color: transparent; }
 .pure-menu .pure-menu-heading { color: #fff; text-transform: none; font-family: 'Arvo', sans-serif; font-size: 18px; padding-left: 0; }
 .pure-menu .pure-menu-heading:hover { color: #1EA0D6; }
-.pure-menu li a { font-weight: 700; color: #fff; }
+.pure-menu li a { font-weight: 700; color: #fff; padding: 5px 19px; }
 .pure-menu li a:hover, .pure-menu li a:focus { color: #1EA0D6; background: none; }
 .pure-menu li.pure-menu-selected a { font-weight: 700; }
 .pure-menu.pure-menu-open { width: auto; }
